syntax = "proto3";

package protobuf;


option java_package = "ai.enpasos.muzero.platform.agent.memory.protobuf";
option java_multiple_files = true;


message ReplayBufferProto {
  int32 version = 10;
  string game_class_name = 11;
  int32 counter = 12;
  int32 window_size = 13;
  repeated GameProto game_protos = 1;
}
message GameProto {
  repeated int32 actions = 1;
  repeated float rewards = 2;
  repeated PolicyTargetProtos policy_targets = 3;
  repeated ValueProtos values = 9;
  repeated float root_values = 4;
  repeated float entropies = 7;
  repeated float surprises = 10;
  int64 count = 8;
  bool surprised = 11;
  int64 tSurprise = 12;
  int64 tStateA = 13;
  int64 tStateB = 14;
  repeated float root_values_from_initial_inference = 5;
  float last_value_error = 6;
  string networkName = 15;
  repeated int32 replacedGameWithActions = 16;
}
message PolicyTargetProtos {
  repeated float policy_target = 1;
}

message ValueProtos {
  repeated float value = 1;
}
